# StyleSync-Inventory-Intelligence

./: README.md
inv/: README.md  crew.txt  final.md  pyproject.toml
inv/src/inv/: crew.py  inventory_sample.csv  main.py  test.py
inv/src/inv/config/: agents.yaml  tasks.yaml
inv/src/inv/tools/: csv_reader_tool.py  search_tool.py  trend_scraper_tool.py  weather_forecast_tool.py
