[project]
name = "inv"
version = "0.1.0"
description = "inv using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
inv = "inv.main:run"
run_crew = "inv.main:run"
train = "inv.main:train"
replay = "inv.main:replay"
test = "inv.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
